# godot-gdpm

./: .gitignore  .pre-commit-config.yaml  .vulture_whitelist.py  AGENTS.md  README.md  README_CN.md  RELEASE_NOTES.md  gdpm.spec  index.html  mkdocs.yml  pyproject.toml  versions.json
.github/templates/: index.html  versions.html
.github/workflows/: build.yml  ci.yml  docs.yml  publish.yml  test-nuitka.yml
.run/: build.run.xml  check.run.xml  mkdocs.run.xml  version.run.xml
0.1.0b1/: 404.html  index.html
0.1.0b1/commands/: index.html
0.1.0b1/configuration/: index.html
0.1.0b1/engine-management/: index.html
0.1.0b1/faq/: index.html
0.1.0b1/installation/: index.html
0.1.0b1/quick-start/: index.html
0.1.0b1/search/: search_index.json
0.1.0b1/zh/: index.html
0.1.0b1/zh/commands/: index.html
0.1.0b1/zh/configuration/: index.html
0.1.0b1/zh/engine-management/: index.html
0.1.0b1/zh/faq/: index.html
0.1.0b1/zh/installation/: index.html
0.1.0b1/zh/quick-start/: index.html
0.1.0b2/: 404.html  index.html  sitemap.xml
0.1.0b2/commands/: index.html
0.1.0b2/configuration/: index.html
0.1.0b2/engine-management/: index.html
0.1.0b2/faq/: index.html
0.1.0b2/installation/: index.html
0.1.0b2/quick-start/: index.html
0.1.0b2/zh/: index.html
0.1.0b2/zh/commands/: index.html
0.1.0b2/zh/configuration/: index.html
0.1.0b2/zh/engine-management/: index.html
0.1.0b2/zh/faq/: index.html
0.1.0b2/zh/installation/: index.html
0.1.0b2/zh/quick-start/: index.html
docs/: CLI.md  DESIGN.md  PLAN.md  todo.md
docs/assets/stylesheets/: custom.css
docs/en/: commands.md  configuration.md  engine-management.md  faq.md  index.md  installation.md  quick-start.md  versions.md
docs/todo/: Godot引擎版本管理.md  Godot自定义引擎.md  gdpm-create.md  github-token.md  godot-remove.md  全局缓存.md  默认引擎配置.md
docs/zh/: commands.md  configuration.md  engine-management.md  faq.md  index.md  installation.md  quick-start.md  versions.md
installer/Linux/: install.sh  uninstall.sh
installer/Windows/: gdpm.bat  install.bat  uninstall.bat
installer/macOS/: install.sh  uninstall.sh
notes/: README.md  README_CN.md  store-openapi.json  todo.md
notes/done/: Godot引擎版本管理.md  gdpm-create.md  godot-remove.md  安装类型检测.md
notes/todo/: Godot自定义引擎.md  asset-library.md  下载优化.md  其他待开发功能.md
scripts/: build.py  check.py  clean.py  install-dev.sh  install.sh  version.py
site/: 404.html  index.html  sitemap.xml
site/faq/: index.html
site/installation/: index.html
site/zh/commands/: index.html
site/zh/engine-management/: index.html
site/zh/quick-start/: index.html
src/: main.py
src/gdpm/: __init__.py  __main__.py  constants.py  main.py
src/gdpm/cache/: __init__.py  file_cache.py  index.py  protocol.py
src/gdpm/cli/: __init__.py  add.py  app.py  cache_cmd.py  common.py  context.py  create.py  display.py  export.py  godot.py  import_cmd.py  info.py  init.py  list.py  lock.py  options.py  remove.py  search.py  status.py  sync.py  update.py
src/gdpm/config/: __init__.py  global_config.py  local_engines.py  project.py
src/gdpm/installer/: __init__.py  manager.py  protocol.py
src/gdpm/lockfile/: __init__.py  lock.py  utils.py
src/gdpm/models/: __init__.py  dependency.py  lock.py  plugin.py  version.py
src/gdpm/resolver/: __init__.py
src/gdpm/store/: __init__.py  client.py  parser.py  protocol.py  utils.py
src/gdpm/utils/: checksum.py  download.py  godot.py  install.py  local.py  path.py  platform.py  tag.py  version.py  zip.py
