[project]
name = "godot-gdpm"
version = "0.0.4"
description = "A dependency package manager for Godot plugins, like uv/npm/cargo"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "playereg" },
]
keywords = ["godot", "package-manager", "dependency", "addon", "plugin"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "platformdirs>=4.0",
    "packaging>=24.0",
]

[project.scripts]
gdpm = "gdpm.cli.app:main"

[project.urls]
Homepage = "https://github.com/playereg/godot-gdpm"
Repository = "https://github.com/playereg/godot-gdpm"
Issues = "https://github.com/playereg/godot-gdpm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdpm"]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "twine>=6.0",
    "build>=1.0",
    "vulture>=2.10",
    "deptry>=0.20",
    "pre-commit>=4.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["gdpm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.deptry]
ignore = ["DEP003"]
