[project]
name = "godot-gdpm"
version = "0.1.0b1"
description = "A dependency package manager for Godot plugins, like uv/npm/cargo"
readme = "README.md"
license = "GPL-3.0"
license-files = ["LICENSE"]
requires-python = ">=3.14"
authors = [
    { name = "playereg" },
]
keywords = ["godot", "package-manager", "dependency", "addon", "plugin"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "platformdirs>=4.0",
    "packaging>=24.0",
    "questionary>=2.1.1",
]

[project.scripts]
gdpm = "gdpm.cli.app:main"

[project.urls]
Homepage = "https://github.com/playereg/godot-gdpm"
Repository = "https://github.com/playereg/godot-gdpm"
Issues = "https://github.com/playereg/godot-gdpm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gdpm"]

[tool.hatch.build.targets.sdist]
exclude = ["docs/", "notes/", "installer/", ".github/", "scripts/"]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pathspec<1.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "twine>=6.0",
    "build>=1.0",
    "vulture>=2.10",
    "deptry>=0.20",
    "pre-commit>=4.0",
    "pylint>=4.0.6",
    "pyinstaller>=6.21.0",
    "mkdocs-material>=9.7.6",
    "mkdocs-static-i18n>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true

[tool.ruff]
target-version = "py314"
line-length = 88

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]

[tool.ruff.lint.isort]
known-first-party = ["gdpm"]

[tool.pylint.messages_control]
disable = [
    # 项目约定
    "missing-class-docstring",
    "missing-function-docstring",
    # 复杂度（CLI 命令天然参数多、分支多）
    "too-many-instance-attributes",
    "too-many-arguments",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-nested-blocks",
    # 延迟导入（避免循环依赖）
    "import-outside-toplevel",
    "wrong-import-position",
    # 测试常见模式
    "redefined-outer-name",
    "reimported",
    # 与 ruff 重叠的风格检查
    "no-else-return",
    "use-implicit-booleaness-not-comparison-to-zero",
    # 项目设计选择
    "broad-exception-caught",
    "unused-argument",
    "protected-access",
    "cell-var-from-loop",
    "consider-using-with",
    "cyclic-import",
    "duplicate-code",
    # pylint 自身
    "unrecognized-option",
]

[tool.pylint.format]
max-line-length = 88

[tool.deptry]
ignore = ["DEP003"]
exclude = [".venv", "scripts"]
